--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <body>
         <p>Hello Semua, Saya sedang belajr Git</p>
         <p>GIT KPD3033</p>
+        <p>Hello semua, saya baru belajar tentang Git</p>
+        <p>Git makin mudah</p>
     </body>
 </html>
