--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
     <head>
         <title>Belajar Git - Projek 01</title>
+        <title>Belajr Git: Remote Repository</title>
     </head>
     <body>
         <p>Hello Semua, Saya sedang belajr Git</p>
         <p>GIT KPD3033</p>
         <p>Hello semua, saya baru belajar tentang Git</p>
         <p>Git makin mudah</p>
+    <p>Yay!sedang menggunakan remote repository</p>
     </body>
 </html>
